Fix category menu getting offset when opened, fix menu div being too large and preventing mouse input over its area, and making link colors darker too make them easier to read in grayscale

--- a/src/scss/root.scss
+++ b/src/scss/root.scss
@@ -8,20 +8,20 @@ li {
 
 a:link {
 	display: inline-block;
-	color: rgb(42, 158, 193);
+	color: rgb(0, 92, 120);
 }
 
 a:link:after {
 	display: block;
 	content: '';
-	border-bottom: 1.75px solid rgb(68, 162, 190);
+	border-bottom: 1.75px solid rgb(15, 128, 163);
 	transform: scaleX(0);
 	transition: transform 250ms ease-in-out;
 }
 
 a:visited {
 	display: inline-block;
-	color: rgb(158, 40, 90);
+	color: rgb(113, 25, 62);
 }
 
 a:visited:after {
@@ -34,7 +34,7 @@ a:visited:after {
 
 a:link:hover,
 .linkHover a:link {
-	color: rgb(68, 162, 190);
+	color: rgb(15, 128, 163);
 }
 
 a:link:hover:after,
